# rust-ebook-scrapper

./: .gitignore
scrapper/: Cargo.toml  lib.rs  main.py  main2.py  main_step1.py  pyproject.toml  pyvenv.cfg
scrapper/src/: lib.rs  main.rs
