[build-system]
requires=["maturin>=1.4,<2.0"]
build-backend = "maturin"


[project]
name = "pyo3_rust"
requires-python=">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Pxthon :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

dynamic = ["version"]

[dependencies]
naturin = "1.4.0"
rustimport = "1.4.0"

[tool. maturin]
features = ["pyo3/extension-module"]